[gd_scene load_steps=6 format=3 uid="uid://dj3hx5is10p83"]

[ext_resource type="FontFile" uid="uid://defnmjsdhl466" path="res://Assets/NormalFont.ttf" id="1_vm8qm"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="2_pqqfe"]
[ext_resource type="Texture2D" uid="uid://db3c8l6hjaxkf" path="res://Assets/istockphoto-1387666645-612x612.jpg" id="3_nms4k"]
[ext_resource type="AudioStream" uid="uid://ot05srff1k6j" path="res://Assets/Musica/5 - Peaceful.ogg" id="4_3823l"]

[sub_resource type="Theme" id="Theme_kxaim"]
default_font = ExtResource("1_vm8qm")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kxaim")
script = ExtResource("2_pqqfe")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nms4k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.5
offset_right = 141.5
offset_bottom = 200.0
grow_horizontal = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "TOWER     DEFENSE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "EXIT"

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3823l")
volume_db = -21.55
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="finished" from="Background" to="." method="_on_background_finished"]
